fix: spacing footer + sett 16px font for html (ble utledet til 18 uten denne)

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -2,11 +2,11 @@ html {
     font-family: sans-serif;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
+    font-size: 16px;
 }
 
 body {
     margin: 0;
-    font-size: 1.5rem;
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -675,8 +675,6 @@ pre tt:after {
     }
 }
 
-html,
-body,
 button,
 a,
 div,
